@@ -1642,3 +1642,6 @@ s/(#[[:space:]]*include[[:space:]]+["<])bn\/vert_tree\.h/\1bg\/vert_tree.h/g
         moved vert_tree.h header [7.32]
 s/bn_vert_tree/bg_vert_tree/g
         moved vert_tree to libbg [7.32]
+s/(#[[:space:]]*include[[:space:]]+["<])bn\/vectfont\.h/\1bview\/vectfont.h/g
+        moved vertfont.h header to bview[7.32]
+
